refactor: functional interface impl, functions